# amduat_scraper

./: .gitignore  LICENSE  README.md  amduat_scraper.py  main.py  pyproject.toml  theban_scraper.py
