[project]
name = "theban-scraper"
version = "0.2.0"
description = "Web scraper for extracting funerary text images (Amduat, Book of Caverns, etc.) from the Theban Mapping Project website"
readme = "README.md"
license = {text = "ISC"}
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "requests>=2.32.5",
]

[project.scripts]
theban-scraper = "theban_scraper:main"

[dependency-groups]
dev = [
    "isort>=6.0.1",
]
